Implemented endpoint for use to set preferred coin, persisted in a in-memory cache and endpoint which returns pricing data for preferred coin

--- a/CoinPrice.Api/CoinPrice.Api/CoinPrice.Api.csproj
+++ b/CoinPrice.Api/CoinPrice.Api/CoinPrice.Api.csproj
@@ -14,5 +14,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoinPrice.Business\CoinPrice.Business.csproj" />
+  </ItemGroup>
+
 
 </Project>
