--- a/CoinPrice.Api/CoinPrice.Api/appsettings.json
+++ b/CoinPrice.Api/CoinPrice.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "WebApiUrls": {
+    "CoinTreeUrl": "https://trade.cointree.com/api/"
+  },
   "AllowedHosts": "*"
 }
