--- a/CoinPrice.Ui/Dockerfile
+++ b/CoinPrice.Ui/Dockerfile
@@ -1,11 +1,17 @@
-FROM node:10
+# Build react app
+FROM node:12.16.1-alpine3.9 as build
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+COPY ./package.json /app/
+COPY ./yarn.lock /app/
+RUN yarn --silent
+COPY . /app
+RUN yarn build
 
-WORKDIR /usr/src/app/CoinPrice.Ui
-
-COPY package*.json ./
-
-RUN npm install
-
-EXPOSE 3000
-
-CMD ["npm", "start"]
+# Build final image
+FROM nginx:1.17.8-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
