Created docker compose for local dev

--- a/CoinPrice.Ui/package.json
+++ b/CoinPrice.Ui/package.json
@@ -26,6 +26,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://coinprice.api:80",
   "browserslist": {
     "production": [
       ">0.2%",
