Configured CORS policy on API, add validation for public coin tree API

--- a/CoinPrice.Api/CoinPrice.Api/appsettings.json
+++ b/CoinPrice.Api/CoinPrice.Api/appsettings.json
@@ -9,5 +9,6 @@
   "WebApiUrls": {
     "CoinTreeUrl": "https://trade.cointree.com/api/"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CORS": "https://coin-price-ui.azurewebsites.net"
 }
